fixed some layout
fixed layout issues

--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ html {
     --boxColor: rgb(71, 71, 71);
     --textColor: white;
     --headColor: green;
+    --gridHover: rgba(34, 34, 34, 0.635);
+
 }
 
 
@@ -24,6 +26,7 @@ body {
     color: var(--textColor);
     font-weight: 300;
 }
+
 
 svg {
     margin-right: 15px;
@@ -62,6 +65,9 @@ span {
     align-items: center;
 
 }
+.grid:hover{
+background-color: var(--gridHover);
+}
 
 .wrapper {
     display: grid;
@@ -76,10 +82,12 @@ span {
 .grid1 {
     grid-column: 1/3;
     grid-row: 1/1;
+    
 }
 
+
 .grid1 img {
-    height: 10rem;
+    height: 7rem;
     border-radius: 50%;
 
 }
@@ -98,7 +106,7 @@ span {
     /* Shift items to the left */
     align-items: center;
     flex-direction: column;
-
+    
 }
 
 .grid2-content {
@@ -114,7 +122,14 @@ span {
 .grid4 {
     grid-column: 7/10;
     grid-row: 5/8;
+    height: 350px;
 }
+button{
+    height: 200px;
+    width: 400px;
+    font-size: 1.5rem;
+}
+
 
 .grid5 {
     grid-column: 7/9;
@@ -129,6 +144,7 @@ span {
 .grid7 {
     grid-column: 3/5;
     grid-row: 3/5;
+    
 }
 
 .grid7-content {
@@ -136,7 +152,14 @@ span {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 2rem;
+    margin: 3rem;
+    position: relative;
+}
+
+.grid7-content button{
+    height: 4rem;
+    width: 300px;
+    font-size: 1.5rem;
 }
 
 .grid8 {
@@ -148,11 +171,18 @@ span {
     grid-column: 1/3;
     grid-row: 3/5;
     position: relative;
+    
 }
 .grid9-content ul li{
     font-size: 2rem;
     font-weight: 300;
 
+}
+.grid9-content .softskills{
+    color: var(--snapColor);
+    font-size: 2rem;
+    font-weight: 300;
+    font-family: "Poppins", sans-serif; ;
 }
 
 
@@ -186,7 +216,15 @@ span {
 .grid12 {
     grid-column: 1 /3;
     grid-row: 2/3;
-
+    display: flex;
+    /* position: relative; */
+    display: flex;
+    flex-direction: column;
+}
+.grid12 .handles{
+    /* position: absolute; */
+    top: 10px;
+    color: var(--snapColor);
 }
 
 .grid13 {
@@ -292,6 +330,16 @@ button{
         font-size: 1.5rem;
         font-weight: 300;
     
+    }
+    /* .grid12{
+    position: unset;
+    }
+    .grid12 .handles{
+        position: unset;
+    } */
+    .grid14 {
+        grid-column: 1/-1; /* Span across all columns */
+        text-align: center;
     }
 
     h2 { 
